; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/extr_libretro.c_state_eof.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/extr_libretro.c_state_eof.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.savestate_state = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @state_eof(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.savestate_state*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.savestate_state*
  store %struct.savestate_state* %5, %struct.savestate_state** %3, align 8
  %6 = load %struct.savestate_state*, %struct.savestate_state** %3, align 8
  %7 = getelementptr inbounds %struct.savestate_state, %struct.savestate_state* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.savestate_state*, %struct.savestate_state** %3, align 8
  %10 = getelementptr inbounds %struct.savestate_state, %struct.savestate_state* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp sge i64 %8, %11
  %13 = zext i1 %12 to i32
  %14 = sext i32 %13 to i64
  ret i64 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
